# pinggypython

./: README.md  pyproject.toml  test1.py
pinggy/: __main__.py  pinggyConnection.py
src/pinggy/: __init__.py  pinggyConnection.py
